--- a/imgui.ini
+++ b/imgui.ini
@@ -16,10 +16,20 @@ Collapsed=0
 [Window][Camera info]
 Pos=15,19
 Size=359,105
-Collapsed=0
+Collapsed=1
 
 [Window][Hello window]
 Pos=26,338
 Size=418,228
+Collapsed=1
+
+[Window][Hello stranger...]
+Pos=60,60
+Size=180,209
+Collapsed=0
+
+[Window][Hello stranger]
+Pos=19,298
+Size=180,209
 Collapsed=1
 
